0.15.3: (unreleased)
	New feature:
		- Number mode for dmenu. allows user to get index back instead of content.

0.15.2: 
	Removed features:
		- Remove (broken) hmode
		- Old style key binding and mode launcher.
		- Old TIMING code.
	New features:
		- Word movement in entry box. (#126)
		- PID file to avoid duplicate Rofi.
		- Generic keybinding and launching for modi. (#128)
		- Auto select mode (previously called zeltak mode) 
	Bug fixes:
		- Shift left/right movement between modi (#125)
		- Document updates (#123,#116,#124,etc.)
		- DMenu mode based on executable name with full path (#119)
		- Fix missing keystrokes.
		- On broken UTF-8 show everything up to the broken character. (#121)
	Others:
		- Significant code refactoring.
		- Rewriting of config parser, Commandline Parser uses structure from Xresource parser.
		  Avoiding duplication and making it easier to maintain.
	Performance improvements:
		- Fix blocking on grabbing keyboard.

0.15.1:
	New features:
		- Improved transparency
		- Changelog
		- Case sensitivity support, with indicator. (Edwin Pujols)
		- Mouse scroll wheel support
		- Alternate Row colors
		- Run-list command for adding entries to run-dialog
		- Dmenu: preselect line.
	Bug fixes:
		- Manpage fixes
		- SSH viewer, support lists of hostnames (Tblue)
		- SSH improve parsing of odly indented host files
		- Do not loose keypresses when system under load
		- Cleanups, small fixes. (Edwin Pujols, blueyed )
	Performance improvements:
		- Lazy refilter for large lists